Fixes some nav issues on ios

--- a/public/styles/_global.less
+++ b/public/styles/_global.less
@@ -41,20 +41,13 @@ p {
   margin-bottom: 1em;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  margin-bottom: 24px;
-}
-
 h1 {
   margin: 0;
 }
 
 table {
   width: 100%;
-  margin: 16px 0;
+  margin: 1em 0;
 
   td {
     text-align: right;
