--- a/public/styles/components/_guess.less
+++ b/public/styles/components/_guess.less
@@ -1,7 +1,9 @@
 .guess {
-  display: flex;
-  justify-content: space-between;
-  margin: 4px 0;
+  padding: 0.1em 0.2em;
+}
+
+.guess-score {
+  float: right;
 }
 
 .guess-no-outcome {
